[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastauth"
version = "0.1.0"
description = "FastAuth package skeleton"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "FastAuth Team" }
]

[tool.setuptools.packages.find]
include = ["fastauth*"]
