[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-access"
version = "0.1.0"
description = "System Access package skeleton"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "System Access Team" }
]
dependencies = [
  "python-dotenv>=1.0.1,<2.0.0",
  "typing-extensions>=4.10.0,<5.0.0",
]

[tool.setuptools.packages.find]
include = ["systemAccess*"]
